--- a/config/services.yaml
+++ b/config/services.yaml
@@ -36,8 +36,8 @@ services:
             - '@translator'
             - '%notification_mail_template%'
 
-    App\EventListener\TrackingManagerSubscriber:
-        arguments:
-            - '@app.tracking_manager'
-        tags:
-            - { name: doctrine.event_subscriber, connection: default }
+#    App\EventListener\TrackingManagerSubscriber:
+#        arguments:
+#            - '@app.tracking_manager'
+#        tags:
+#            - { name: doctrine.event_subscriber, connection: default }
